add gui improvments